distortion fix

--- a/app/scss/_general.scss
+++ b/app/scss/_general.scss
@@ -29,7 +29,7 @@ a:active {
 }
 
 .game {
-  width: 180vh;
+  width: 160vh;
   height: 90vh;
   border: 1px solid white;
   background-color: black;
